lbtools/nohup.out
  File "label_maker_method_3.py", line 88
    if theta_img[i,j] <= theta_max
                                 ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "label_maker_method_3.py", line 96, in <module>
    ray[k-start,:] = cp.array([cp.nan, cp.nan, cp.nan])
  File "cupy/core/core.pyx", line 1248, in cupy.core.core.ndarray.__setitem__
  File "cupy/core/_routines_indexing.pyx", line 49, in cupy.core._routines_indexing._ndarray_setitem
  File "cupy/core/_routines_indexing.pyx", line 798, in cupy.core._routines_indexing._scatter_op
  File "cupy/core/_routines_indexing.pyx", line 324, in cupy.core._routines_indexing._simple_getitem
IndexError: Index 70 is out of bounds for axis 0 with size 70
Traceback (most recent call last):
  File "label_maker_method_3.py", line 114, in <module>
    kx = ray[not_nans,0]
  File "cupy/core/core.pyx", line 1176, in cupy.core.core.ndarray.__getitem__
  File "cupy/core/_routines_indexing.pyx", line 35, in cupy.core._routines_indexing._ndarray_getitem
  File "cupy/core/_routines_indexing.pyx", line 228, in cupy.core._routines_indexing._get_mask_index
ValueError: currently, CuPy only supports slices that consist of one boolean array.
Traceback (most recent call last):
  File "label_maker_method_3.py", line 115, in <module>
    kx = ks[not_nans]
NameError: name 'ks' is not defined
Traceback (most recent call last):
  File "label_maker_method_3.py", line 133, in <module>
    kx = ray[not_nans,0]
  File "cupy/core/core.pyx", line 1176, in cupy.core.core.ndarray.__getitem__
  File "cupy/core/_routines_indexing.pyx", line 35, in cupy.core._routines_indexing._ndarray_getitem
  File "cupy/core/_routines_indexing.pyx", line 228, in cupy.core._routines_indexing._get_mask_index
ValueError: currently, CuPy only supports slices that consist of one boolean array.
